--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,4 +1,4 @@
 <%= link_to "Sign In", '/signin' %> or
 <%= link_to "Sign Up", '/signup' %>
 <br>
-<%= link_to "Continue as Guest", categories_path %>
+<%= link_to "Continue as Guest", '/items/all' %>
