--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,8 +1,8 @@
 <h1>Image Placeholder</h1>
 <div>
-<%= @item.name %><br>
-<%= @item.price_formatted %><br>
-<%= @item.quantity %> Available<br>
+  <%= @item.name %><br>
+  <%= @item.price_formatted %><br>
+  <%= @item.quantity %> Available<br>
 </div>
 
 <div class="">
@@ -12,3 +12,5 @@
 <div class="">
   Reviews placeholder
 </div>
+
+<%= link_to "Add to Cart", add_to_cart(@item.id) %>
