cart working. checkout working.

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,8 +1,9 @@
 <h1>Image Placeholder</h1>
 <div>
   <%= @item.name %><br>
-  <%= @item.price_formatted %><br>
+  $<%= @item.price_formatted %><br>
   <%= @item.quantity %> Available<br>
+  Sold by: <%= @item.user.username %><br>
 </div>
 
 <div class="">
