--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,4 +21,5 @@ Address:
   <%= @user.addresses[0].zipcode %><br>
 </div> <br>
 
+$<%= @user.format_balance %><br>
 <%= link_to "Edit Profile", edit_user_path(@user)%>
