--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td>image placeholder </td>
         <td><%= link_to item.name, category_item_path(item.category, item) %></td>
-        <td><%= item.price_formatted %></td>
+        <td>$<%= item.price_formatted %></td>
         <td><%= item.quantity %></td>
       </tr>
       <% end %>
