--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,3 +1,4 @@
+<h1><%= @user.username.titleize %>'s Cart</h1>
 <table>
   <col width="200">
   <col width="300">
@@ -30,7 +31,7 @@
         <td></td>
         <td></td>
         <td><strong>Subtotal: </strong></td>
-        <% if @user.cart[0].item.present? %>
+        <% if @user.cart[0].present? %>
           <td>$<%= @user.cart_total %></td>
         <% end %>
       </tr>
@@ -48,4 +49,6 @@
   <%= form_tag '/checkout' do %>
     <%= submit_tag 'Check Out'%>
   <% end %>
-</div>
+</div> <br>
+
+<%= link_to "Keep Shopping", '/items/all'%>
