--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -16,4 +16,6 @@
 
 <%= form_tag add_to_cart_category_item_path(@item.category, @item) do %>
   <%= submit_tag 'Add to Cart'%>
-<% end %>
+<% end %> <br>
+
+<%= link_to "Back to Shopping", '/items/all'%>
