--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -2,13 +2,15 @@
 
 <h5>Picture Placeholder</h5> <br>
 
-<%= form_for @item, :url => url_for(:controller => 'items', :action => 'post') do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :price %>
-  <%= f.number_field :price %>
-  <%= f.label :quantity %>
-  <%= f.number_field :quantity %>
-  <%= f.collection_select(:category_id, Category.all, :id, :name) %>
-  <%= f.submit %>
+<%= form_tag('/items/all') do %>
+  <%= label_tag :name %>
+  <%= text_field_tag "item[name]" %>
+  <%= label_tag :price %>
+  <%= number_field_tag "item[price]" %>
+  <%= label_tag :quantity %>
+  <%= number_field_tag "item[quantity]" %>
+  <%= label_tag :category %>
+  <%= select_tag "item[category_id]", options_from_collection_for_select(Category.all, :id, :name) %>
+  <% number_field_tag "item[user_id]", value: session[:user_id] %>
+  <%= submit_tag "Create Item"%>
 <% end %>
