--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,8 +9,8 @@
 </div>
 
 <h1><%= @user.username.titleize %>'s Dashboard</h1>
-<h2><%= link_to "Shop", '/items/all' %></h2>
-
+<h2><%= link_to "Shop", '/items/all' %></h2> <br>
+<p>  <%= link_to "Sell an Item", '/items/new' %></p>
 <p>Email:<br><%= @user.email %></p>
 
 <div>
