created inventory page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,6 +28,8 @@
 $ <%= @user.format_balance %>
 </div>
 
+<h2><%= link_to "Inventory", '/inventory' %></h2>
+
 <h2>Orders:</h2>
 <table>
   <col width="200">
