working image function

--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -12,5 +12,7 @@
   <%= label_tag :category %>
   <%= select_tag "item[category_id]", options_from_collection_for_select(Category.all, :id, :name) %>
   <% number_field_tag "item[user_id]", value: session[:user_id] %>
+  <%= label_tag :image %><br>
+  <%= file_field_tag :image %>
   <%= submit_tag "Create Item"%>
 <% end %>
