--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -2,7 +2,7 @@
 
 <h5>Picture Placeholder</h5> <br>
 
-<%= form_tag('/items/all') do %>
+<!-- <%= form_tag('/items/all') do %>
   <%= label_tag :name %>
   <%= text_field_tag "item[name]" %>
   <%= label_tag :price %>
@@ -12,5 +12,22 @@
   <%= label_tag :category %>
   <%= select_tag "item[category_id]", options_from_collection_for_select(Category.all, :id, :name) %>
   <% number_field_tag "item[user_id]", value: session[:user_id] %>
+  <%= label_tag :image %><br>
+  <%= file_field_tag "item[image]" %>
   <%= submit_tag "Create Item"%>
+<% end %> -->
+
+<%= form_for @item, url: items_all_path do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field "name" %>
+  <%= f.label :price %>
+  <%= f.number_field "price" %>
+  <%= f.label :quantity %>
+  <%= f.number_field "quantity" %>
+  <%= f.label :category %>
+  <%= f.collection_select(:category_id, Category.all, :id, :name) %>
+  <% f.number_field "user_id", value: session[:user_id] %>
+  <%= f.label :image %><br>
+  <%= f.file_field "image" %>
+  <%= f.submit "Create Item"%>
 <% end %>
