--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
   </head>
 
   <body>
+    <div>
+      <ul>
+        <li><%= link_to "Big Name Shop", '/items/all' %></li>
+        <li><%= link_to "Cart Placeholder", '/cart' %></li>
+        <li><%= form_tag '/signout' do %>
+          <%= submit_tag 'Sign Out'%>
+        <% end %></li>
+      </ul>
+    </div>
     <%= yield %>
   </body>
 </html>
