--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,7 @@ $ <%= @user.format_balance %>
 </div>
 
 <h2><%= link_to "Inventory", '/inventory' %></h2>
+<h3><%= link_to "Add New Item", '/items/new' %></h3>
 
 <h2>Orders:</h2>
 <table>
