--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -2,18 +2,18 @@
 
 <%= form_for @item, url: category_item_path(@item.category, @item) do |f| %>
   <%= f.label :name %>
-  <%= f.text_field "name" %>
+  <%= f.text_field "name" %><br>
   <%= f.label :price %>
-  <%= f.number_field "price" %>
+  <%= f.number_field "price" %><br>
   <%= f.label :quantity %>
-  <%= f.number_field "quantity" %>
+  <%= f.number_field "quantity" %><br>
   <%= f.label :category %>
-  <%= f.collection_select(:category_id, Category.all, :id, :name) %>
+  <%= f.collection_select(:category_id, Category.all, :id, :name) %><br>
   <% f.number_field "user_id", value: session[:user_id] %>
-  <%= f.label :image %><br>
-  <%= f.file_field "image" %>
-  <%= label_tag :description %>
-  <%= text_area_tag "description" %>
+  <%= f.label :image %>
+  <%= f.file_field "image" %><br>
+  <%= f.label :description %>
+  <%= f.text_area "description", @item.description %><br>
   <%= f.submit "Edit Item"%>
 <% end %>
 
