edit item working. items#show even if no item.description.

--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -13,7 +13,7 @@
   <%= f.label :image %>
   <%= f.file_field "image" %><br>
   <%= f.label :description %>
-  <%= f.text_area "description", @item.description %><br>
+  <%= f.text_area "description" %><br>
   <%= f.submit "Edit Item"%>
 <% end %>
 
