--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+ body {
+   margin: 0;
+   padding: 0;
+   height: auto;
+   width: auto;
+   font-size: 50px;
+   position: relative;
+ }
+
+ .signs {
+   font-size: 30px;
+ }
