--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,3 +1,5 @@
+<%= render "/layouts/navbar" %>
+
 <h1>Edit Item</h1> <br>
 
 <%= form_for @item, url: category_item_path(@item.category, @item) do |f| %>
