--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Mod2ProjectFlatazonMarket</title>
-    <%= csrf_meta_tags %>
+<html lang="en">
+<head>
+ <title>Flatazon</title>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+ <!-- Important! Links to JS and stylesheets -->
+ <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+ <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-  <body>
-    <div>
-      <ul>
-        <li><%= link_to "Big Name Shop", '/items/all' %></li>
-        <li><%= link_to "Dashboard", '/dashboard' %></li>
-        <li><%= link_to "Cart Placeholder", '/cart' %></li>
-        <li><%= form_tag '/signout' do %>
-          <%= submit_tag 'Sign Out'%>
-        <% end %></li>
-      </ul>
-    </div>
-    <%= yield %>
-  </body>
+ <!-- Bootstrap CDN -->
+ <!-- <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+
+ <!-- Alternative: semantics UI -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
+
+ </head>
+</head>
+<body style="padding: 5em; padding-top: 0em">
+
+ <%= yield %>
+
+</body>
 </html>
