--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<%= render "/layouts/navbar" %>
+
 <%= form_for @user, url: '/dashboard' do |f| %>
   <%= render partial: 'form', locals: {f: f} %>
 
