--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,17 +21,36 @@
 
  </head>
 </head>
-<body style="padding: 5em; padding-top: 0em">
-  <div>
-    <ul>
-      <li><%= link_to "Big Name Shop", '/items/all' %></li>
-      <li><%= link_to "Dashboard", '/dashboard' %></li>
-      <li><%= link_to "Cart Placeholder", '/cart' %></li>
-      <li><%= form_tag '/signout' do %>
+<body style="padding: 5em; padding-top: 2em">
+
+  <div class="ui secondary  menu">
+  <a>
+    <%= link_to "Dashboard", '/dashboard', class: "item active" %>
+  </a>
+  <a>
+    <%= link_to "Shop", '/items/all', class: "item" %>
+  </a>
+  <a>
+    <%= link_to "Cart", '/cart', class: "item" %>
+  </a>
+  <div class="right menu">
+    <div class="item">
+      <div class="ui icon input segment">
+        <%= form_tag('/items/all', method: :get) do %>
+          <%= text_field_tag :term, params[:term] %>
+          <%= button_tag type: :submit, class: "ui button white-bg" do %>
+            <i class="search icon"></i>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+    <a class="ui item">
+      <%= form_tag '/signout' do %>
         <%= submit_tag 'Sign Out'%>
-      <% end %></li>
-    </ul>
+      <% end %>
+    </a>
   </div>
+</div>
 
  <%= yield %>
 
