--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
             <% end %>
           </div>
         </div>
-        <a class="ui item">
+        <a class="ui item no-padding">
           <%= form_tag '/signout' do %>
             <%= submit_tag 'Sign Out', class: "ui item no-border"%>
           <% end %>
