--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -2,20 +2,20 @@
 <h1>Edit Item</h1> <br>
 
 <%= form_for @item, url: category_item_path(@item.category, @item) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field "name" %><br>
-  <%= f.label :price %>
-  <%= f.number_field "price" %><br>
-  <%= f.label :quantity %>
-  <%= f.number_field "quantity" %><br>
-  <%= f.label :category %>
-  <%= f.collection_select(:category_id, Category.all, :id, :name) %><br>
-  <% f.number_field "user_id", value: session[:user_id] %>
-  <%= f.label :image %>
-  <%= f.file_field "image" %><br>
-  <%= f.label :description %>
-  <%= f.text_area "description" %><br>
-  <%= f.submit "Edit Item"%>
+<%= f.label :name %> <br>
+<%= f.text_field "name" %><br>
+<%= f.label :price %> <br>
+<%= f.number_field "price" %><br>
+<%= f.label :quantity %> <br>
+<%= f.number_field "quantity" %><br>
+<%= f.label :description %> <br>
+<%= f.text_area "description" %><br>
+<%= f.label :category %> <br>
+<%= f.collection_select(:category_id, Category.all, :id, :name) %><br>
+<% f.number_field "user_id", value: session[:user_id] %> <br>
+<%= f.label "Add Image" %> <br>
+<%= f.file_field "image" %><br> <br>
+<%= f.submit "Edit Item"%>
 <% end %>
 
 <%= button_to 'Delete Item', category_item_path(@item.category, @item), :method => 'delete' %>
