--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,19 +1,18 @@
-
-<h1>Create Item</h1> <br>
+<h1>Create Item</h1>
 
 <%= form_for @item, url: items_all_path do |f| %>
-  <%= f.label :name %>
+  <%= f.label :name %> <br>
   <%= f.text_field "name" %><br>
-  <%= f.label :price %>
+  <%= f.label :price %> <br>
   <%= f.number_field "price" %><br>
-  <%= f.label :quantity %>
+  <%= f.label :quantity %> <br>
   <%= f.number_field "quantity" %><br>
-  <%= f.label :category %>
-  <%= f.collection_select(:category_id, Category.all, :id, :name) %><br>
-  <% f.number_field "user_id", value: session[:user_id] %>
-  <%= f.label :image %>
-  <%= f.file_field "image" %><br>
-  <%= f.label :description %>
+  <%= f.label :description %> <br>
   <%= f.text_area "description" %><br>
+  <%= f.label :category %> <br>
+  <%= f.collection_select(:category_id, Category.all, :id, :name) %><br>
+  <% f.number_field "user_id", value: session[:user_id] %> <br>
+  <%= f.label "Add Image" %> <br>
+  <%= f.file_field "image" %><br> <br>
   <%= f.submit "Create Item"%>
 <% end %>
