--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
  </head>
 </head>
 <body>
+  <div class="ui center aligned header">
+    <h1 class="super-large">Flatazon Marketplace</h1>
+  </div>
   <div class="nav-padding">
     <div class="ui secondary  menu">
       <a href='/dashboard' class="item">Dashboard</a>
@@ -50,6 +53,6 @@
   <div class="body-padding">
     <%= yield %>
   </div>
-  <div class="center aligned">TM Jason & Ryan</div>
+
 </body>
 </html>
