logo added to layout. bg color swap.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,8 +43,14 @@
 
 .super-large {
   font-size: 75px;
+  font-weight: 2000;
+  font-style: italic;
 }
 
 .center-foot {
   text-align: center;
+}
+
+.my-black {
+  color: 000;
 }
