--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,13 @@
 
  </head>
 </head>
-<body>
-  <div class="ui center aligned header">
-    <h1 class="super-large">Flatazon Marketplace</h1>
+<body style="background-color: #f7f8ff;">
+
+
+  <div class="ui vertical masthead">
+    <a href="/items/all">
+      <img class='ui centered image' src="https://i.imgur.com/c2mUKbb.png" alt="">
+    </a>
   </div>
   <div class="nav-padding">
     <div class="ui secondary  menu">
@@ -53,5 +57,6 @@
   <div class="body-padding">
     <%= yield %>
   </div>
+
 </body>
 </html>
