--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -23,4 +23,4 @@
     <%= submit_tag 'Add to Cart'%>
   <% end %>
 </div>
-<h3><%= link_to "Back to Shopping", '/items/<a href=""></a>ll'%></h3>
+<h3><%= link_to "Back to Shopping", '/items/all'%></h3>
