category search menu. and signin if guest/signout if logged in

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,8 @@
 <script type="text/javascript">$(document).ready(function(){$(".rating").rating();});</script>
 
-<h1>Home</h1>
+<h1>Shop</h1>
 
+<%= render "categories" %>
 
 <table class="ui celled padded table">
     <thead>
