--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,12 @@
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 
  <!-- Alternative: semantics UI -->
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
 
- </head>
-</head>
+   </head>
+  </head>
 <body style="background-color: #f7f8ff;">
 
 
@@ -29,6 +29,7 @@
       <img class='ui centered image' src="https://i.imgur.com/c2mUKbb.png" alt="">
     </a>
   </div>
+
   <div class="nav-padding">
     <div class="ui secondary  menu">
       <a href='/dashboard' class="item">Dashboard</a>
@@ -45,11 +46,15 @@
             <% end %>
           </div>
         </div>
-        <a class="ui item no-padding">
-          <%= form_tag '/signout' do %>
-            <%= submit_tag 'Sign Out', class: "ui item no-border"%>
-          <% end %>
-        </a>
+        <% if session[:user_id] %>
+          <a class="ui item no-padding">
+            <%= form_tag '/signout' do %>
+              <%= submit_tag 'Sign Out', class: "ui item no-border"%>
+            <% end %>
+          </a>
+        <% else %>
+          <a href='/' class="ui item no-padding">Sign In / Sign Out</a>
+        <% end %>
       </div>
     </div>
   </div>
