redirect to root changed to root_url.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
             <% end %>
           </a>
         <% else %>
-          <a href='/' class="ui item no-padding">Sign In / Sign Out</a>
+          <a href='/' class="ui item no-padding">Sign In / Sign Up</a>
         <% end %>
       </div>
     </div>
